--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>注文フォーム</title>
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
-  <h2>出商購買注文フォーム</h2>
+  <h2>注文フォーム</h2>
   <form id="orderForm">
     名前：<input type="text" name="name"><br>
     職員室：<input type="text" name="table"><br>
@@ -15,13 +16,26 @@
   </form>
 
   <script>
+    // LIFF初期化（あなたの LIFF ID を使う）
+    liff.init({
+      liffId: "2007582092-z96ok8V2"
+    }).then(() => {
+      // 初期化成功時の処理（オプション：ログインしてなければログイン）
+      if (!liff.isLoggedIn()) {
+        liff.login();
+      }
+    }).catch((err) => {
+      alert("LIFFの初期化に失敗しました: " + err);
+    });
+
+    // フォーム送信処理
     document.getElementById('orderForm').onsubmit = function(e) {
       e.preventDefault();
       const formData = Object.fromEntries(new FormData(e.target));
       fetch("https://yoshidatoshiyuki.github.io/order-form/", {
         method: "POST",
         body: JSON.stringify(formData)
-      }).then(res => alert("注文を送信しました"));
+      }).then(() => alert("注文が送信されました"));
     };
   </script>
 </body>
