--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     document.getElementById('orderForm').onsubmit = function(e) {
       e.preventDefault();
       const formData = Object.fromEntries(new FormData(e.target));
-      fetch("https://yoshidatoshiyuki.github.io/order-form/", {
+      fetch("https://script.google.com/macros/s/AKfycbzxJf8ByzXgJPKNvto1kGtDziTEEXIO8aX_TtmsElzP_RahXS2NrtUkCGxgqf2gO2LT/exec", {
         method: "POST",
         body: JSON.stringify(formData)
       }).then(() => alert("注文が送信されました"));
