--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
   </form>
 
   <script>
-    // LIFF初期化（あなたの LIFF ID を使う）
     liff.init({
       liffId: "2007582092-z96ok8V2"
     }).then(() => {
-      // 初期化成功時の処理（オプション：ログインしてなければログイン）
       if (!liff.isLoggedIn()) {
         liff.login();
       }
-    }).catch((err) => {
-      alert("LIFFの初期化に失敗しました: " + err);
     });
 
-    // フォーム送信処理
     document.getElementById('orderForm').onsubmit = function(e) {
       e.preventDefault();
       const formData = Object.fromEntries(new FormData(e.target));
       fetch("https://script.google.com/macros/s/AKfycbxXwtdK6dgumgQ_vMaNBVuf2W_RWGbH3Cvxc6P6bG0BHiKKatZ_q1PLYGedIse0K0VT/exec", {
         method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
         body: JSON.stringify(formData)
-      }).then(() => alert("注文が送信されました"));
+      }).then(res => res.text())
+        .then(txt => alert("サーバー応答: " + txt))
+        .catch(err => alert("送信失敗: " + err));
     };
   </script>
 </body>
