--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>注文フォーム</title>
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
-  <h2>注文フォーム</h2>
+  <h2>レストラン注文フォーム</h2>
   <form id="orderForm">
-    名前：<input type="text" name="name"><br>
+    氏名：<input type="text" name="name"><br>
     職員室：<input type="text" name="table"><br>
     商品：<input type="text" name="menu"><br>
     数量：<input type="number" name="quantity"><br>
@@ -16,28 +15,13 @@
   </form>
 
   <script>
-    liff.init({
-      liffId: "2007582092-z96ok8V2"
-    }).then(() => {
-      if (!liff.isLoggedIn()) {
-        liff.login();
-      }
-    });
-
     document.getElementById('orderForm').onsubmit = function(e) {
       e.preventDefault();
       const formData = Object.fromEntries(new FormData(e.target));
-
-      fetch("https://script.google.com/macros/s/AKfycbyhac01TnlrbCLafv2CEwp0UfSt_zkVS9IxVNRntE-rbzWocJLX-aAcP3vktNn1R4DZ/exec", {
+      fetch("https://script.google.com/macros/s/AKfycbz1tJ_rFp3U0uhIbM9AZ5OUuHVo7la_FzHx2INiy0K6XyoOiHjt0Eb7tNKR7cJDfIpX/exec", {
         method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
         body: JSON.stringify(formData)
-      })
-      .then(res => res.text())
-      .then(txt => alert("サーバー応答: " + txt))
-      .catch(err => alert("送信失敗: " + err));
+      }).then(res => alert("注文を送信しました"));
     };
   </script>
 </body>
