--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>注文フォーム</title>
 </head>
 <body>
-  <h2>レストラン注文フォーム</h2>
+  <h2>出商ITサービス注文form</h2>
   <form id="orderForm">
     氏名：<input type="text" name="name"><br>
     職員室：<input type="text" name="table"><br>
