--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>注文フォーム</title>
+  <!-- LIFF SDK を読み込む -->
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
   <h2>出商ITサービス注文form</h2>
@@ -15,13 +17,29 @@
   </form>
 
   <script>
+    // LIFFアプリ初期化（あなたのLIFF IDに書き換えてください）
+    liff.init({
+      liffId: "2007592277-rlBakm54"
+    }).then(() => {
+      if (!liff.isLoggedIn()) {
+        liff.login();
+      }
+    }).catch(err => {
+      alert("LIFF初期化エラー: " + err);
+    });
+
     document.getElementById('orderForm').onsubmit = function(e) {
       e.preventDefault();
       const formData = Object.fromEntries(new FormData(e.target));
       fetch("https://script.google.com/macros/s/AKfycbz1tJ_rFp3U0uhIbM9AZ5OUuHVo7la_FzHx2INiy0K6XyoOiHjt0Eb7tNKR7cJDfIpX/exec", {
         method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
         body: JSON.stringify(formData)
-      }).then(res => alert("注文を送信しました"));
+      }).then(res => res.text())
+        .then(txt => alert("サーバー応答: " + txt))
+        .catch(err => alert("送信失敗: " + err));
     };
   </script>
 </body>
