--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         headers: {
           "Content-Type": "application/json"
         },
+        mode: "no-cors",
         body: JSON.stringify(formData)
       }).then(res => res.text())
         .then(txt => alert("サーバー応答: " + txt))
