--- a/index.html
+++ b/index.html
@@ -27,36 +27,42 @@
     }).catch(err => {
       alert("LIFF初期化エラー: " + err);
     });
-
-document.getElementById('orderForm').onsubmit = function(e) {
-  e.preventDefault();
-  const formData = Object.fromEntries(new FormData(e.target));
-
-  fetch("https://script.google.com/macros/s/AKfycbz1tJ_rFp3U0uhIbM9AZ5OUuHVo7la_FzHx2INiy0K6XyoOiHjt0Eb7tNKR7cJDfIpX/exec", {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json"
-    },
-    mode: "no-cors", // ←必要（LINE LIFFでPOST成功のため）
-    body: JSON.stringify(formData)
-  })
-  .then(() => {
-    // 注文内容を表示
-    const message = `
-    氏名：${formData.name}
-    職員室：${formData.table}
-    商品：${formData.menu}
-    数量：${formData.quantity}
-
-    注文を受け付けました。ありがとうございました！
-    `;
-    alert(message);
-    document.getElementById('orderForm').reset(); // フォームを初期化
-  })
-  .catch(err => {
-    alert("送信失敗: " + err);
+    <script>
+  liff.init({
+    liffId: "2007592277-rlBakm54"
+  }).then(() => {
+    if (!liff.isLoggedIn()) {
+      liff.login();
+    }
+  }).catch(err => {
+    alert("LIFF初期化エラー: " + err);
   });
-};
+
+  document.getElementById('orderForm').onsubmit = function(e) {
+    e.preventDefault();
+    const formData = Object.fromEntries(new FormData(e.target));
+
+    fetch("https://script.google.com/macros/s/AKfycbz1tJ_rFp3U0uhIbM9AZ5OUuHVo7la_FzHx2INiy0K6XyoOiHjt0Eb7tNKR7cJDfIpX/exec", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      mode: "no-cors",
+      body: JSON.stringify(formData)
+    }).then(() => {
+      const message =
+        "氏名：" + formData.name + "\n" +
+        "職員室：" + formData.table + "\n" +
+        "商品：" + formData.menu + "\n" +
+        "数量：" + formData.quantity + "\n\n" +
+        "注文を受け付けました。ありがとうございました！";
+
+      alert(message);
+      document.getElementById('orderForm').reset();
+    }).catch(err => {
+      alert("送信失敗: " + err);
+    });
+  };
 
   </script>
 </body>
