--- a/index.html
+++ b/index.html
@@ -5,30 +5,45 @@
   <title>注文フォーム</title>
   <!-- LIFF SDK を読み込む -->
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+    }
+    input, button {
+      margin-bottom: 10px;
+      display: block;
+    }
+    #result {
+      margin-top: 20px;
+      font-weight: bold;
+      white-space: pre-wrap; /* 改行を反映する */
+    }
+  </style>
 </head>
 <body>
-  <h2>出商ITサービス注文form</h2>
+  <h2>出商ITサービス注文フォーム</h2>
   <form id="orderForm">
-    氏名：<input type="text" name="name"><br>
-    職員室：<input type="text" name="table"><br>
-    商品：<input type="text" name="menu"><br>
-    数量：<input type="number" name="quantity"><br>
+    氏名：<input type="text" name="name" required><br>
+    職員室：<input type="text" name="table" required><br>
+    商品：<input type="text" name="menu" required><br>
+    数量：<input type="number" name="quantity" required><br>
     <button type="submit">注文する</button>
   </form>
 
   <!-- メッセージ表示用 -->
-  <div id="result" style="margin-top: 20px; font-weight: bold;"></div>
+  <div id="result"></div>
 
   <script>
     // LIFF 初期化
     liff.init({
-      liffId: "2007592277-rlBakm54"
+      liffId: "2007592277-rlBakm54" // ←あなたのLIFF IDに変更しないでOK
     }).then(() => {
       if (!liff.isLoggedIn()) {
         liff.login();
       }
     }).catch(err => {
-      alert("LIFF初期化エラー: " + err);
+      document.getElementById('result').innerText = "LIFF初期化エラー: " + err;
     });
 
     // フォーム送信処理
@@ -41,7 +56,7 @@
         headers: {
           "Content-Type": "application/json"
         },
-        mode: "no-cors",
+        mode: "no-cors", // LIFFでPOSTする場合は必要
         body: JSON.stringify(formData)
       }).then(() => {
         const message =
@@ -50,11 +65,11 @@
           "商品：" + formData.menu + "\n" +
           "数量：" + formData.quantity + "\n\n" +
           "注文を受け付けました。ありがとうございました！";
-        
-        alert(message); // または document.getElementById('result').innerText = message;
+
+        document.getElementById('result').innerText = message;
         document.getElementById('orderForm').reset();
       }).catch(err => {
-        alert("送信失敗: " + err);
+        document.getElementById('result').innerText = "送信失敗: " + err;
       });
     };
   </script>
