--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>注文フォーム</title>
+  <!-- LIFF SDK -->
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <!-- スタイルシート -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,6 +31,7 @@
   <div id="result"></div>
 
   <script>
+    // LIFF初期化
     liff.init({
       liffId: "2007592277-rlBakm54"
     }).then(() => {
@@ -39,46 +42,37 @@
       document.getElementById('result').innerText = "LIFF初期化エラー: " + err;
     });
 
-document.getElementById('orderForm').onsubmit = function(e) {
-  e.preventDefault();
-  const formData = Object.fromEntries(new FormData(e.target));
+    // 注文送信
+    document.getElementById('orderForm').onsubmit = function(e) {
+      e.preventDefault();
+      const formData = Object.fromEntries(new FormData(e.target));
 
-  fetch("https://script.google.com/macros/s/AKfycbz1tJ_rFp3U0uhIbM9AZ5OUuHVo7la_FzHx2INiy0K6XyoOiHjt0Eb7tNKR7cJDfIpX/exec", {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json"
-    },
-    mode: "no-cors",
-    body: JSON.stringify(formData)
-  })
-  .then(() => {
-    const message =
-      "氏名：" + formData.name + "\n" +
-      "職員室：" + formData.table + "\n" +
-      "商品：" + formData.menu + "\n" +
-      "数量：" + formData.quantity + "\n\n" +
-      "注文を受け付けました。ありがとうございました！";
-
-    document.getElementById('result').innerHTML = `
-      <pre>${message}</pre>
-      <button onclick="liff.closeWindow()" style="
-        margin-top: 20px;
-        padding: 10px 20px;
-        font-size: 16px;
-        background-color: #2ecc71;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      ">閉じる</button>
-    `;
-    document.getElementById('orderForm').reset();
-  })
-  .catch(err => {
-    document.getElementById('result').innerText = "送信失敗: " + err;
-  });
-};
-
+      fetch("https://script.google.com/macros/s/AKfycbz1tJ_rFp3U0uhIbM9AZ5OUuHVo7la_FzHx2INiy0K6XyoOiHjt0Eb7tNKR7cJDfIpX/exec", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        mode: "no-cors",
+        body: JSON.stringify(formData)
+      })
+      .then(() => {
+        const message = `
+          <div class="message-box">
+            <p><strong>氏名：</strong>${formData.name}</p>
+            <p><strong>職員室：</strong>${formData.table}</p>
+            <p><strong>商品：</strong>${formData.menu}</p>
+            <p><strong>数量：</strong>${formData.quantity}</p>
+            <p>注文を受け付けました。ありがとうございました！</p>
+            <button onclick="liff.closeWindow()" class="close-btn">閉じる</button>
+          </div>
+        `;
+        document.getElementById('result').innerHTML = message;
+        document.getElementById('orderForm').reset();
+      })
+      .catch(err => {
+        document.getElementById('result').innerText = "送信失敗: " + err;
+      });
+    };
   </script>
 </body>
 </html>
