--- a/index.html
+++ b/index.html
@@ -1,78 +1,70 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>注文フォーム</title>
-  <!-- LIFF SDK -->
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-  <!-- スタイルシート -->
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Portfolio｜風景写真家「SNAPPERS」</title>
+<link href="https://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-  <h2>出商ITサービス注文フォーム</h2>
-
-  <form id="orderForm">
-    <label for="name">氏名</label>
-    <input type="text" name="name" id="name" required>
-
-    <label for="table">職員室</label>
-    <input type="text" name="table" id="table" required>
-
-    <label for="menu">商品</label>
-    <input type="text" name="menu" id="menu" required>
-
-    <label for="quantity">数量</label>
-    <input type="number" name="quantity" id="quantity" required>
-
-    <button type="submit">注文する</button>
-  </form>
-
-  <div id="result"></div>
-
-  <script>
-    // LIFF初期化
-    liff.init({
-      liffId: "2007592277-rlBakm54"
-    }).then(() => {
-      if (!liff.isLoggedIn()) {
-        liff.login();
-      }
-    }).catch(err => {
-      document.getElementById('result').innerText = "LIFF初期化エラー: " + err;
-    });
-
-    // 注文送信
-    document.getElementById('orderForm').onsubmit = function(e) {
-      e.preventDefault();
-      const formData = Object.fromEntries(new FormData(e.target));
-
-      fetch("https://script.google.com/macros/s/AKfycbz1tJ_rFp3U0uhIbM9AZ5OUuHVo7la_FzHx2INiy0K6XyoOiHjt0Eb7tNKR7cJDfIpX/exec", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        mode: "no-cors",
-        body: JSON.stringify(formData)
-      })
-      .then(() => {
-        const message = `
-          <div class="message-box">
-            <p><strong>氏名：</strong>${formData.name}</p>
-            <p><strong>職員室：</strong>${formData.table}</p>
-            <p><strong>商品：</strong>${formData.menu}</p>
-            <p><strong>数量：</strong>${formData.quantity}</p>
-            <p>注文を受け付けました。ありがとうございました！</p>
-            <button onclick="liff.closeWindow()" class="close-btn">閉じる</button>
-          </div>
-        `;
-        document.getElementById('result').innerHTML = message;
-        document.getElementById('orderForm').reset();
-      })
-      .catch(err => {
-        document.getElementById('result').innerText = "送信失敗: " + err;
-      });
-    };
-  </script>
+<body id="portfolio">
+  
+  <!-- header始まり -->
+  <header>
+    <div class="logo">
+      <a href="index.html"><img src="images/logo.png" alt="SNAPPERS"></a>
+    </div>
+    <nav>
+      <ul class="global-nav">
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- header終わり -->
+  
+  <!-- wrap始まり -->
+  <div id="wrap" class="clearfix">
+    <div class="content">
+      <div class="main">
+        <h1>Portfolio</h1>
+        <p>これまでに撮影した写真や映像作品を掲載しています。</p>
+        <section>
+          <h2><a href="photograph.html"><img src="images/portfolio-photo.jpg" alt="PHOTOGRAPH"></a></h2>
+          <p>SNAPPERSでは「街-City」「海-Beach」「森-Forest」の3つの場所で、様々な角度から「人の気配」を撮影します。人が写っていない写真の中にも確かにそこにある、人の気配を感じとっていただけると嬉しいです。<a href="photograph.html">詳しくみる ≫</a></p>
+        </section>
+        <section>
+          <h2><a href="video.html" ><img src="images/portfolio-video.jpg" alt="VIDEO"></a></h2>
+          <p>SNAPPERSでは映像作品も撮影しております。ドローンでの空撮やアクションカメラを使用した、屋外でのダイナミックな映像を得意としています。またショートフィルムを映画祭などで上映することもあります。<a href="video.html">詳しくみる ≫</a></p>
+        </section>
+      </div>
+      <aside class="sidebar">
+        <section>
+          <h2>Photograph</h2>
+          <ul>
+            <li><a href="photograph.html#city">街-City</a></li>
+            <li><a href="photograph.html#beach">海-Beach</a></li>
+            <li><a href="photograph.html#forest">森-Forest</a></li>
+          </ul>
+        </section>
+        <section>
+          <h2>Video</h2>
+          <ul>
+            <li><a href="video.html#movie">Movie</a></li>
+            <li><a href="video.html#short-film">Short film</a></li>
+          </ul>
+        </section>
+      </aside>
+    </div>
+  </div>
+  <!-- wrap終わり -->
+  
+  <!-- footer始まり -->
+  <footer>
+    <small>(C)2017 Hattori-studio.</small>
+  </footer>
+  <!-- footer終わり -->
+  
 </body>
 </html>
