--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>出商ITサービス注文フォーム</h2>
+  <h2>出商スマホで注文サービス</h2>
 
   <form id="orderForm">
     <label for="name">氏名</label>
