--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
     </select>
 
     <label for="quantity">数量</label>
-    <input type="number" name="quantity" id="quantity" min="1" required>
+    <select name="quantity" id="quantity" required>
+      <option value="" disabled selected>選択してください</option>
+      <option value="1">1個</option>
+      <option value="2">2個</option>
+      <option value="3">3個</option>
+      <option value="4">4個</option>
+      <option value="5">5個</option>
+      <option value="6">6個</option>
+      <option value="7">7個</option>
+      <option value="8">8個</option>
+      <option value="9">9個</option>
+      <option value="10">10個</option>
+    </select>
 
     <button type="submit">注文する</button>
   </form>
