--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <label for="name">氏名</label>
     <input type="text" name="name" id="name" required>
 
-    <label for="table">職員室</label>
+    <label for="table">利用場所</label>
     <select name="table" id="table" required>
       <option value="" disabled selected>選択してください</option>
       <option value="1. 職員室">1. 職員室</option>
@@ -29,11 +29,10 @@
     <label for="menu">商品</label>
     <select name="menu" id="menu" required>
       <option value="" disabled selected>選択してください</option>
-      <option value="スナック菓子 1個70円">1. スナック菓子 1個70円</option>
-      <option value="キットカット 1個50円">2. キットカット 1個50円</option>
-      <option value="バームクーヘン 1個50円">3. バームクーヘン 1個50円</option>
-      <option value="アイスクリーム 1個100円">4. アイスクリーム 1個100円</option>
-      <option value="アイスコーヒー 1杯70円">5. アイスコーヒー 1杯70円</option>
+      <option value="コーヒー 100円">1. コーヒー 100円</option>
+      <option value="お茶 100円">2. お茶 100円</option>
+      <option value="アクエリアス 100円">3. アクエリアス 100円</option>
+      <option value="スナック菓子 80円">4. スナック菓子 80円</option>
     </select>
 
     <label for="quantity">数量</label>
@@ -44,11 +43,6 @@
       <option value="3">3個</option>
       <option value="4">4個</option>
       <option value="5">5個</option>
-      <option value="6">6個</option>
-      <option value="7">7個</option>
-      <option value="8">8個</option>
-      <option value="9">9個</option>
-      <option value="10">10個</option>
     </select>
 
     <button type="submit">注文する</button>
