--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     // LIFF初期化
     liff.init({
-      liffId: "https://liff.line.me/2007592277-rlBakm54"  // ←あなたのLIFF IDに書き換えてください
+      liffId: "2007592277-rlBakm54"  // ←あなたのLIFF IDに書き換えてください
     }).then(() => {
       if (!liff.isLoggedIn()) {
         liff.login();
