--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       // 動画終了時に自動で注文ページへ遷移
       video.addEventListener('ended', () => {
         liff.openWindow({
-          url: "https://izusho-shorika.github.io/order.html", // ←注文ページのURLに変更
+          url: "https://izusho-shorika.github.io/order-form/order.html", // ←注文ページのURLに変更
           external: false
         });
       });
@@ -74,7 +74,7 @@
         video.pause();
         video.currentTime = 0;
         liff.openWindow({
-          url: "https://izusho-shorika.github.io/order.html", // ←注文ページのURLに変更
+          url: "https://izusho-shorika.github.io/order-form/order.html", // ←注文ページのURLに変更
           external: false
         });
       });
