--- a/index.html
+++ b/index.html
@@ -50,34 +50,24 @@
 
     // LIFF初期化
     liff.init({
-      liffId: "2007592277-rlBakm54"  // ←あなたのLIFF IDに書き換えてください
+      liffId: "2007592277-rlBakm54"  // ご自身のLIFF ID
     }).then(() => {
       if (!liff.isLoggedIn()) {
         liff.login();
       }
 
-      // 5秒後にスキップボタンを表示
+      // 5秒後にスキップボタン表示
       setTimeout(() => {
         skipBtn.style.display = 'block';
       }, 5000);
 
-      // 動画終了時に自動で注文ページへ遷移
-      video.addEventListener('ended', () => {
-        liff.openWindow({
-          url: "https://izusho-shorika.github.io/order-form/order.html", // ←注文ページのURLに変更
-          external: false
-        });
-      });
+      // スキップボタンまたは動画終了時に order.html へ遷移
+      const goToOrder = () => {
+        window.location.href = "order.html"; // 同一WebView内で遷移させる
+      };
 
-      // ×ボタンを押した場合
-      skipBtn.addEventListener('click', () => {
-        video.pause();
-        video.currentTime = 0;
-        liff.openWindow({
-          url: "https://izusho-shorika.github.io/order-form/order.html", // ←注文ページのURLに変更
-          external: false
-        });
-      });
+      video.addEventListener('ended', goToOrder);
+      skipBtn.addEventListener('click', goToOrder);
 
     }).catch(err => {
       console.error("LIFF初期化エラー", err);
