--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
   <!-- 注文フォーム -->
   <div id="form-container">
-    <h2>出商スマホで注文サービス(ver.3)</h2>
+    <img src="logo.png" alt="ロゴ" class="logo">
+    <h2>出商スマホで注文サービス(ver.4)</h2>
     <form id="orderForm">
       <label for="name">氏名</label>
       <input type="text" name="name" id="name" required>
