--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: "Helvetica Neue", sans-serif;
-      background-color: #f8f8f8;
+      background-color: #fafafa;
       height: 100%;
       overflow: hidden;
     }
