--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: "Helvetica Neue", sans-serif;
-      background-color: #fafafa;
+      background-color: #f4f4f4;
       height: 100%;
       overflow: hidden;
     }
@@ -55,7 +55,7 @@
   <!-- 動画部分 -->
   <div id="video-container">
     <video autoplay muted playsinline id="cmVideo">
-      <source src="izusho_cm_01.mp4" type="video/mp4">
+      <source src="izusho_cm_02.mp4" type="video/mp4">
       このブラウザは動画に対応していません。
     </video>
     <button id="skip-button">×</button>
@@ -63,8 +63,7 @@
 
   <!-- 注文フォーム -->
   <div id="form-container">
-    <img src="logo.png" alt="ロゴ" class="logo">
-    <h2>出商スマホで注文サービス(ver.6)</h2>
+    <h2>出商スマホで注文サービス(ver.3)</h2>
     <form id="orderForm">
       <label for="name">氏名</label>
       <input type="text" name="name" id="name" required>
