--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <!-- 動画部分 -->
   <div id="video-container">
     <video autoplay muted playsinline id="cmVideo">
-      <source src="izusho_cm_02.mp4" type="video/mp4">
+      <source src="izusho_cm_02.MP4" type="video/mp4">
       このブラウザは動画に対応していません。
     </video>
     <button id="skip-button">×</button>
